--- a/mygo/mygo-web/src/main/webapp/css/common.css
+++ b/mygo/mygo-web/src/main/webapp/css/common.css
@@ -14,19 +14,32 @@
 	margin-top: 50px;
 }
 
-.submitBtn{
-	background-color:white;
-	width: 80px;
-	height:22px;
+.register_button{
+	padding:8 60 8 60;
+	font-size:16px;
+	font-weight:bold;
+	width: auto;
+	height:auto;
 	border-radius:3px;
-	border: 1px solid #666666;
+	background-color: #21B1E3;
+	color: white;
+	border: 1px solid #21B1E3
+}
+
+.login_button{
+	padding:10 60 10 60;
+	font-size:16px;
+	font-weight:bold;
+	width: auto;
+	height:auto;
+	border-radius:3px;
+	background-color: #21B1E3;
+	color: white;
+	border: 1px solid #21B1E3
 }
 
 a{color: #679AEF;text-decoration: none;} /* 未访问的链接 */
 a:hover{color:#E06F6F;text-decoration:underline; }
-
-
-
 
 
 
