--- a/mygo/mygo-web/.settings/org.eclipse.wst.common.component
+++ b/mygo/mygo-web/.settings/org.eclipse.wst.common.component
@@ -7,6 +7,9 @@
         <dependent-module archiveName="mygo-service-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/mygo-service/mygo-service">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="mygo-alipay-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/mygo-alipay/mygo-alipay">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="mygo-web"/>
         <property name="java-output-path" value="/mygo-web/target/classes"/>
     </wb-module>
