--- a/mygo/mygo-web/src/main/webapp/css/common.css
+++ b/mygo/mygo-web/src/main/webapp/css/common.css
@@ -51,7 +51,7 @@
 	width: auto;
 	height:auto;
 	border-radius:3px;
-	background-color: #02AAF1;
+	background-color: #24a0d6;
 	color: white;
 	border: 1px solid #21B1E3
 }
